--- a/sass/_helpers.scss
+++ b/sass/_helpers.scss
@@ -2,6 +2,8 @@
 HELPERS
 \* - - - - - - - - - - - - - - - - - - - - */
 
+.headroom-xxs {margin-top: 0.5em;}
+
 .headroom-xs {margin-top: 1em;}
 
 .headroom-sm {margin-top: 2em;}
